<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_game_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/game_info"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_correct_char"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/correct_character_color"
        android:gravity="center"
        android:text="A"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_game_info"
        app:layout_constraintTop_toBottomOf="@id/tv_game_info" />


    <TextView
        android:id="@+id/tv_correct_character_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/correct_character_description"
        app:layout_constraintBottom_toBottomOf="@+id/tv_correct_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_correct_char"
        app:layout_constraintTop_toTopOf="@+id/tv_correct_char" />


    <TextView
        android:id="@+id/tv_wrong_char"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/incorrect_character_color"
        android:gravity="center"
        android:text="B"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_game_info"
        app:layout_constraintTop_toBottomOf="@id/tv_correct_char" />


    <TextView
        android:id="@+id/tv_wrong_char_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/incorrect_character_description"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wrong_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_wrong_char"
        app:layout_constraintTop_toTopOf="@+id/tv_wrong_char" />


    <TextView
        android:id="@+id/tv_mal_placed_char"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/not_well_placed_character_color"
        android:gravity="center"
        android:text="C"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_game_info"
        app:layout_constraintTop_toBottomOf="@id/tv_wrong_char" />


    <TextView
        android:id="@+id/tv_mal_placed_char_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/mal_placed_character_description"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mal_placed_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_mal_placed_char"
        app:layout_constraintTop_toTopOf="@+id/tv_mal_placed_char" />




</androidx.constraintlayout.widget.ConstraintLayout>