<!-- activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_word_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_difficulty"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_word_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/edit_text_bg_color"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="1"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_word_size"
        app:layout_constraintTop_toBottomOf="@id/tv_word_size" />


    <TextView
        android:id="@+id/tv_number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/number_of_attempts"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_word_size"
        app:layout_constraintTop_toBottomOf="@id/et_word_size" />


    <EditText
        android:id="@+id/et_number_of_attempts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/edit_text_bg_color"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_word_size"
        app:layout_constraintTop_toBottomOf="@id/tv_number_of_attempts" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/submit_button_color"
        android:text="@string/start_game"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_number_of_attempts" />


    <include
        android:id="@+id/game_info_layout"
        layout="@layout/game_info_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/guessEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/enter_you_guess"
        android:backgroundTint="@color/edit_text_bg_color"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/submit_button_color"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/guessEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guessEditText"
        app:layout_constraintTop_toTopOf="@+id/guessEditText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_guessedWords"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/item_character"
        tools:itemCount="9"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessEditText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/game_matrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="guessEditText,submitButton,rv_guessedWords" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/game_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tv_number_of_attempts,tv_word_size,et_number_of_attempts,et_word_size,btn_start_game,game_info_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
